--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         
         <nav class="navprim">
-            <a href="https://roalro.github.io/PagWEB1/">INICIO</a>
+            <!-- <a href="https://roalro.github.io/PagWEB1/">INICIO</a> -->
             <a href="https://www.facebook.com/Peruvian-Wonders-108281630933799"
             target="_blank"><img class="RS" src="img/facebook-ConvertImage.ico"></a>
             
